[gd_scene load_steps=3 format=3 uid="uid://edj4mrjcdllv"]

[ext_resource type="Script" uid="uid://cwh3elsuig05m" path="res://items/scripts/dropped_item.gd" id="1_tb5vf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qu2ag"]
radius = 5.09902

[node name="DroppedItem" type="Node2D"]
z_index = 1
script = ExtResource("1_tb5vf")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="Area2D" type="Area2D" parent="."]

[node name="PickupBox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_qu2ag")

[node name="despawn_timer" type="Timer" parent="."]
wait_time = 5.0

[node name="ItemQuantity" type="Label" parent="."]
offset_left = 1.0
offset_top = -3.0
offset_right = 7.0
offset_bottom = 9.0
theme_override_font_sizes/font_size = 8

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="timeout" from="despawn_timer" to="." method="_on_despawn_timer_timeout"]
